# signalbox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
src/: Board.cpp  Board.h  Space.cpp  Space.h  State.h  Widget.cpp  Widget.h  app.cpp  app.h  board.cpp  board.h  context.h  context_gl.c  context_mtl.m  draw.cpp  draw.h  enc.cpp  enc.h  filter.h  linear.h  main.cpp  space.cpp  space.h  state.h  tracker.cpp  tracker.h  ui.cpp  ui.h  util.h  widget.cpp  widget.h
src/filters/: chn.cpp  chn.h  executor.cpp  executor.h  fir.cpp  fir.h  gen.cpp  gen.h  sample.h  sbfft.cpp  sbfft.h  sig.cpp  sig.h  simd.h  sse.c  sse.h  tfm.cpp  tfm.h  trk.cpp  trk.h  viz.cpp  viz.h
src/tracker/: tracker.cpp  tracker.h
